WIP Correction font size on mobile

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ em {
 @media (max-width: 1023px) {
     h1 {
         font-weight: bold;
-        font-size: 10em;
+        font-size: 6em;
     }
 
     h2 {
